k8s_up_and_running/kuard_tutorial/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  defaultBackend:
    service:
      name: be-default
      port:
        number: 8080
  rules:
    - host: alpaca.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bandicoot
                port:
                  number: 8080
          - pathType: Prefix
            path: "/a/"
            backend:
              service:
                name: alpaca
                port:
                  number: 8080
